# free5gc

./: .gitignore  .gitmodules  .golangci.yaml  .golangci.yml  CONTRIBUTING.md  License.md  Makefile  Makefile-CI  README.md  THIRD-PARTY-NOTICES.txt  bitbucket-pipelines.yml  build.sh  force_kill.sh  go.mod  go.sum  install_env.sh  make_gtp5gtunnel.sh  make_libgtp5gnl.sh  nrf.go  patch.sh  quick-setup-helm.sh  quick-setup.sh  read_topo.go  readme.md  reload_host_config.sh  run.pid  run.sh  smf_upf_topo.json  test.sh  test_ci.sh  test_ci_ulcl.sh  test_debug.sh  test_multiUPF.sh  test_ulcl.sh  upgrade_go.sh
AccessToken/: api_access_token_request_test.go  routers.go
Discovery/: api_nf_instances_store.go  routers.go
Management/: api_nf_instance_id_document.go  api_nf_instance_id_document_test.go  api_nf_instances_store.go  api_nf_instances_store_test.go  api_subscription_id_document.go  api_subscription_id_document_test.go  api_subscriptions_collection.go  routers.go
UriList/: item.go  link.go
accesstoken/: api_access_token_request.go  api_access_token_request_test.go  routers.go
ansible-helm/: README.md  ansible.cfg  install.yaml  inventory.ini
cert/: af.pem  ausf.pem  bsf.key  bsf.pem  chf.key  chf.pem  n3iwf.pem  nef.pem  nrf.pem  root.key  root.pem  smf.pem  udm.key  udm.pem  udr.key  udr.pem
cmd/: main.go
config/: amfcfg.conf  amfcfg.n3test.conf  amfcfg.n3test.yaml  amfcfg.yaml  ausfcfg.conf  ausfcfg.yaml  bsfcfg.yaml  chfcfg.yaml  free5GC.conf  n3iwfcfg.conf  n3iwfcfg.test.yaml  n3iwfcfg.yaml  nefcfg.yaml  nrfcfg.conf  nrfcfg.yaml  nssfcfg.conf  nssfcfg.yaml  pcfcfg.conf  pcfcfg.yaml  scpcfg.yaml  smf.FR5GC858.cfg  smfcfg.conf  smfcfg.single.conf  smfcfg.test.conf  smfcfg.ulcl.conf  smfcfg.yaml  tngfcfg.test.yaml  tngfcfg.yaml  udmcfg.conf  udmcfg.yaml  udrcfg.conf  udrcfg.yaml  uecfg.conf  uerounting.yaml  uerouting.yaml  upfcfg.test.yaml  upfcfg.testulcl.yaml  upfcfg.yaml  webuicfg.conf  webuicfg.yaml
consumer/: nf_register_discovery_test.go
context/: context.go  link.go  management_data.go  nrf_context.go  search_nf_instance.go  uri_list.go
dataconv/: dataconv.go
discovery/: api_nf_instances_store.go  api_nf_instances_store_test.go  routers.go
docs/: Criando ambiente de desenvolvimento - GO.md  Criando um cluster Kubernetes.md  README Free5GC - Stage 3.md  README.md  Setup-Dev-Environment.md  Test-Ping.md  tech-spec-3GPP.md
factory/: config.go  config_configuration.go  config_info.go  config_sbi.go  factory.go
free5gc/: Kptfile  README.md  package-context.yaml
handler/: handler.go  handler_test.go
infra/: git-script.sh  gitmessage  pre-commit
logger/: logger.go
management/: api_management.go  api_nf_instance_id_document.go  api_nf_instance_id_document_test.go  api_nf_instances_store.go  api_nf_instances_store_test.go  api_subscription_id_document.go  api_subscription_id_document_test.go  api_subscriptions_collection.go  api_subscriptions_collection_test.go  routers.go
nrf_producer/: nrf_producer.go
nrf_service/: nrf_init.go
nrf_util/: util.go  util_debug.go
producer/: access_token.go  nf_discovery.go  nf_management.go  producer.go
release/: manu.sh  release.sh  tag.sh
service/: init.go
src/upf/: .gitignore  CMakeLists.txt  readme.md
src/upf/config/: upfcfg.example.yaml  upfcfg.test.example.yaml  upfcfg.ulcl.example.yaml
src/upf/lib/gtpv1/: CMakeLists.txt  test.c
src/upf/lib/gtpv1/include/: gtp_buffer.h  gtp_header.h  gtp_link.h  gtp_path.h  gtp_tunnel.h
src/upf/lib/knet/include/: knet_route.h
src/upf/lib/libgtp5gnl/: AUTHORS  Make_global.am  Makefile.am  README.md  TODO-RELEASE  configure.ac  libgtp5gnl.pc.in  run.sh
src/upf/lib/libgtp5gnl/debian/: changelog  control  libgtp5gnl-dev.install  libgtp5gnl0.install  rules
src/upf/lib/libgtp5gnl/include/: Makefile.am
src/upf/lib/libgtp5gnl/include/libgtp5gnl/: Makefile.am  gtp5g.h  gtp5gnl.h
src/upf/lib/libgtp5gnl/include/linux/: Makefile.am  gtp5g.h  if_link.h
src/upf/lib/libgtp5gnl/script/: aupf.sh  cleanup.sh  config  iupf.sh  ns_ran1_iupf1_aupf1.sh  ns_ran_upf.sh  ns_ran_upf_bridge.sh  ran.sh  upf.sh
src/upf/lib/libgtp5gnl/src/: Makefile.am  genl.c  gtp5g-genl-far.c  gtp5g-genl-pdr.c  gtp5g-rtnl.c  gtp5g.c  internal.h  libgtp5gnl.map  tools.h
src/upf/lib/libgtp5gnl/tools/: Makefile.am  gtp5g-link.c  gtp5g-tunnel.c
src/upf/lib/libgtpnl-1.2.1/: AUTHORS  Makefile.am  README.md  configure.ac  libgtpnl.pc.in
src/upf/lib/libgtpnl-1.2.1/contrib/: jenkins.sh
src/upf/lib/libgtpnl-1.2.1/debian/: control  libgtpnl0.install  rules
src/upf/lib/libgtpnl-1.2.1/include/: Makefile.am
src/upf/lib/libgtpnl-1.2.1/include/libgtpnl/: Makefile.am  gtp.h  gtpnl.h
src/upf/lib/libgtpnl-1.2.1/include/linux/: Makefile.am  gtp.h  if_link.h
src/upf/lib/libgtpnl-1.2.1/src/: Makefile.am  genl.c  gtp-genl.c  gtp-rtnl.c  gtp.c  internal.h  libgtpnl.map
src/upf/lib/libgtpnl-1.2.1/tools/: Makefile.am  gtp-link.c  gtp-tunnel.c
src/upf/lib/pfcp/include/: pfcp_convert.h  pfcp_message.h  pfcp_node.h  pfcp_path.h  pfcp_types.h  pfcp_xact.h
src/upf/lib/utlt/: CMakeLists.txt
src/upf/lib/utlt/include/: utlt_3gppTypes.h  utlt_buff.h  utlt_debug.h  utlt_event.h  utlt_hash.h  utlt_index.h  utlt_lib.h  utlt_list.h  utlt_mq.h  utlt_network.h  utlt_pool.h  utlt_test.h  utlt_thread.h  utlt_time.h  utlt_timer.h  utlt_yaml.h
src/upf/lib/utlt/logger/: logger.go
src/upf/src/: CMakeLists.txt  upf.c  upf.h  upf_config.c  upf_config.h  upf_context.c  upf_context.h  upf_init.c
src/upf/src/n4/: n4_dispatcher.c  n4_dispatcher.h  n4_pfcp_build.c  n4_pfcp_build.h  n4_pfcp_handler.c  n4_pfcp_handler.h  n4_pfcp_path.c  n4_pfcp_path.h
src/upf/src/up/: up_gtp_path.c  up_gtp_path.h  up_path.c  up_path.h
src/upf/test/: test.c
src/upf/test/case/: testUp.c  test_userPlane.c
src/upf/test/include/: test_packet.h  test_upf.h
src/upf/test/src/: testUpfSample.c  test_packet.c
src/upf/version/: version.sh
test/: afInfluenceOnTrafficRouting_test.go  authentication_test.go  callback_test.go  deregistration_test.go  go.mod  go.sum  gtp.go  gutiRegistration_test.go  handover_test.go  milenage.go  (+23 more)
(+3928 files in other folders)
